# Sawyer_teleop_with_touchx-3D-system

./: .gitignore  Dockerfile  README.md  intera.sh  reset_can.sh  setup_can.sh
src/: .rosinstall  .rosinstall.bak
src/intera_sdk/: intera.sh
src/relaxed_ik_core/configs/: settings.yaml
src/relaxed_ik_core/src/: relaxed_ik.rs
src/relaxed_ik_core/src/groove/: groove.rs  objective_master.rs
src/touchx_sawyer_teleop/: CMakeLists.txt  package.xml
src/touchx_sawyer_teleop/config/: teleop_params.yaml
src/touchx_sawyer_teleop/launch/: sim_phantom_teleop.launch  sim_teleop_test.launch  test_touchx_viz.launch  touchx_teleop.launch
src/touchx_sawyer_teleop/rviz/: sawyer_sim.rviz
src/touchx_sawyer_teleop/scripts/: data_recorder.py  realsense_camera.py  sensors.py  test_touchx_teleop_viz.py
src/touchx_sawyer_teleop/urdf/: sawyer_with_robotiq85.urdf.xacro
